--- a/VRChat/76/986876.html
+++ b/VRChat/76/986876.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eownNsqrLDFex1FB6AwD9n7J8KsIg2hY5XwQUjj0qKU="></script>
+    "tzr8EJhhZnEY+zmMc5xj5hW5fuVEsXfstEzguJ5NkMU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『相模琴音』","description":"VRChatアバターの習作として作成したキャラクターです。名前は”相模琴音”です。まんまるシェーダーを使わせていただきました。\nVRChat中は、デスクトップならShift+F1～F4で表情が変えられます。\n\n【データ内容】\n・Unityパッケージ\n・FBXデータ\n・blendデータ\n・テクスチャ（png）\n・利用規約（テキスト）\n\n【利用規約】\n本規約の範囲について\n・本規約は、江良野（以下、作者）が作成した3Dモデルデータ（以下、本データ）を使用する方（以下、利用者）に適用されます\n・本規約は予告なく変更される場合があり、変更された場合は最新のものにしたがいます\n・本データは利用規約の範囲内に限り利用いただけます\n\n■利用方法\n特に制限はしません\n※VRchat、自主製作ゲーム、動画、モデル検証等、ご自由にお使いください\n\n■商用利用\n許可します\n※自主製作ゲームへの使用など、問題ありません\n※第三者のライブ動画、紹介画像への映り込みも問題ありません\n\n■改変・改造\n許可します\n※改変・改造後のモデルも再配布は禁止です\n\n■R18・R18G表現\n許可します\n\n■二次配布・アップロードについて\n本データの再配布を禁止します\n※vrchatへのアップロード、ペデスタル等ローカルにダウンロード出来ない形式は、問題ありません \n※自主製作ゲーム等に含めての配布は、問題ありません\n\n\n\n【免責】\n・本データを利用することで、利用者が受ける損害および被害に関し、作者はいかなる補償をもいたしません\n・本データを利用することで、利用者が他者に損害および被害を与えた場合には、その責任および補償の義務は当該利用者にあるものとします\n\n【おまけ設定】\n都市国家オーガストシティの治安を守る強化兵士。\n狙撃が得意で、バレットM82を愛用している。\nおとなしい性格で、趣味は読書。\nバトルスーツはチャクラにエネルギーを流し込むことで装着者の身体機能を向上させる。\n恥ずかしいデザインなので本人は着用を嫌がっているが、任務のために耐えている。\n元となったイラストはこちら（https://www.pixiv.net/member_illust.php?mode=medium\u0026illust_id=64659062）。","url":"https://booth.pm/ja/items/986876","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/8a050f83-8ff0-411f-a28e-623e02aedea9/i/986876/4d6be0b0-0fb0-47f0-8c0f-ae6cec56126d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eownNsqrLDFex1FB6AwD9n7J8KsIg2hY5XwQUjj0qKU="></script>
+    nonce="tzr8EJhhZnEY+zmMc5xj5hW5fuVEsXfstEzguJ5NkMU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/986876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/986876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
