--- a/VRChat/80/986280.html
+++ b/VRChat/80/986280.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yiKPuX/s+MsuHo6sp1cRWOlnriVIzLga6F/1Jkla4v4="></script>
+    "4nhQ+ywVAsjEliTb4b6O0uX+evs8nteVZfey2QSTa+0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"やみかわスーツ","description":"やみかわスーツ\n\n■説明\nご自分のアバター、改造OKなアバターの頭と組み合わせて使用する\n着せ替え用のスーツ（ボディー）です。\nVRChatでの仕様を想定して制作しました。 \n改造、改変自由です。\n\n着せ替え方法　https://youtu.be/O1dSXy_HYLA\n紹介動画　https://youtu.be/1DP0kgLL3y4\n\n■仕様\nうさみみ、うさしっぽ、安全ピンは別メッシュなので取り外しできます。\n\n■使い方\nご利用するアバターを3Dソフト等で頭部のみの状態にして下さい。\nHumanoid用のボーンは削除して下さい。\n（髪の毛やそれに付随する揺れ用のボーンがある場合は残して下さい）\n\nunity上で当データ（unitypackage）をインポートします。\nシーン上に着せたいカラーのボディーのプレファブを配置します。\nアバターの頭部を配置してサイズと位置を合わせます。\nヒエラルキー上からボディーのArmatureを選択します。\nArmatureのHead下（mixamorig:Headと言う名前です）にご利用のアバターの頭部を配置します。\n必要に応じて髪などにDynamicboneを設定して下さい。\n\n■利用規約\n\n許可\n○改造や改変\n○衣装の一部分のみを他アバターに使用する(使用するアバターの規約も同時に規約を満たしている必要があります)\n○収益化動画への写り込み(使用する頭部も同時に規約を満たしている必要があります)\n○衣装を利用したvTuber活動\n○unityで制作するゲームに使用できます。インディーズの場合、作者名と作品名の明記のみお願いします。企業の場合、別途利用料を頂戴しますので、ご連絡ください。\n\n禁止事項\n○第三者への貸出：VRChat上ペデスタルでの使用を禁止します。\n○配布：改造の有無を問わず、インターネットを通じて誰でもDL可能な状態にすることを禁止します。\n○売買：改造の有無を問わず、第三者への売買を禁止します。\n\nTo English speaking people.\nThis data can be remodeled, good for commercial use, do not redistribute.\n\n■規約の同意\n当データを利用する場合、規約に同意したとみなします。\n\n■規約の変更\n作者である黒井は当規約を変更できるものとします\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n■制作協力\nデザイン：黒瀬サバト\nアドバイス：ユイト\n\n当モデルは、みに様のまんまるしぇーだー（https://twitter.com/Mini_9321_VR/status/1013973807323742208）を同封、設定させていただいております。\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井\n2018/8/25\nver1.3","url":"https://booth.pm/ja/items/986280","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/986280/7e212ec0-18bd-4e2d-898b-bd10e675be25_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yiKPuX/s+MsuHo6sp1cRWOlnriVIzLga6F/1Jkla4v4="></script>
+    nonce="4nhQ+ywVAsjEliTb4b6O0uX+evs8nteVZfey2QSTa+0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/986280/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/986280/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
