--- a/VRChat/54/985954.html
+++ b/VRChat/54/985954.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bQafEwcRtph+hoqUkLVzPYMdeMCPXSx+gKlWAk2h58A="></script>
+    "SzZB5mHmrUfe3QpLCY9LFIEMZINnH82dcgiEcU/GATk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatアバター向け甚平","description":"【VRChatアバター向け甚平】\nVRChatアバター向けの着せ替え素材です。\nボーンやウェイト等の設定は全くしていないので自分のアバターに合うように自由に加工してご使用ください。\n\nポリゴン数：1290ポリゴン\nマテリアル数：1\nテクスチャ数：1\n\n\n【内容】\n甚平.FBX\n甚平.png\n\n【利用規約】\n特になし。自由にご使用ください。\n","url":"https://booth.pm/ja/items/985954","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/985954/ec8a95f2-9efb-4eef-8016-8349d1847469_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bQafEwcRtph+hoqUkLVzPYMdeMCPXSx+gKlWAk2h58A="></script>
+    nonce="SzZB5mHmrUfe3QpLCY9LFIEMZINnH82dcgiEcU/GATk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/985954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              173
+                              172
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/985954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              173
+                              172
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
