--- a/VRChat/53/960853.html
+++ b/VRChat/53/960853.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aTxvO1QOcQuNEwORP/+p8vkvdjn0M/IRC8ICuKPnz3Y="></script>
+    "OVCaTpBuaaL5FNEJGYfYEZfuSqeF13qFo8QydUQqNW0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRM\u0026Unitypackage]Yorimichi","description":"※テクスチャパックはver2.0.0アップデートに伴い、500円への価格改定と販売ページの統合を行いました。誠に勝手ながら、旧テクスチャパックのデータ更新はver2.0.0用のテクスチャで終了とさせていただきます。何卒ご了承下さい。\n\nバーチャルキャストや各種ゲームで使うことができる、FBX・VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！\n改変用のpsd・blendファイルも添付されており、オリジナルカスタムを加えたい方にもオススメです。","url":"https://booth.pm/ja/items/960853","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/960853/5f89ae81-52a7-412a-bbbf-e67c78652712_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aTxvO1QOcQuNEwORP/+p8vkvdjn0M/IRC8ICuKPnz3Y="></script>
+    nonce="OVCaTpBuaaL5FNEJGYfYEZfuSqeF13qFo8QydUQqNW0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/960853/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/960853/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
